# MyDAW

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  UI_IMPROVE.md  build.cmd  run.bat
docs/: ARCHITECTURE.md  BUILDING.md  CPR_IMPORT_PLAN.md  CPR_MIXER_FORMAT.md  CPR_TRACK_ARCHIVE_WRITER_SPEC.md  CPR_WRITER_M1_NOTES.md  CPR_WRITER_M2_NOTES.md  CPR_WRITER_M3_NOTES.md  CROSS_PLATFORM_VST_PLAN.md  IMPORT_PROJECT.md  ROADMAP.md  SPEC.md  STUBS.md  TRACK_TYPES_PLAN.md
docs/examples/: MyFormatImportProvider.cpp
engine/: CMakeLists.txt
engine/assets/: cpr-donor-c5.cpr
engine/src/: App.cpp  App.h  EngineContext.h  Settings.cpp  Settings.h  main.cpp
engine/src/agent/: AgentCatalog.gen.cpp  AgentCatalog.gen.h  AgentQuery.cpp  AgentQuery.h
engine/src/audio/: AsioDriver.cpp  AsioDriver.h  DriverManager.cpp  DriverManager.h  IAudioDriver.h  NullDriver.cpp  NullDriver.h  WasapiDriver.cpp  WasapiDriver.h
engine/src/core/: AudioGraph.cpp  AudioGraph.h  AutomationEval.cpp  AutomationEval.h  Eq.h  GraphNode.h  IInsertNode.h  Meters.h  Metronome.cpp  Metronome.h  Mixer.cpp  Mixer.h  Pdc.cpp  Pdc.h  RtRing.h  TempoMap.cpp  TempoMap.h  TrackNode.cpp  TrackNode.h  Transport.cpp  Transport.h
engine/src/core/effects/: BuiltinEffectManager.cpp  BuiltinEffectManager.h  BuiltinEffectNode.h  Effects.cpp  Effects.h  IEffect.h
engine/src/export/: CprDonor.gen.h  CprWriter.cpp  CprWriter.h  TrackArchiveWriter.cpp  TrackArchiveWriter.h
engine/src/import/: CprImportProvider.cpp  CprImportProvider.h  ImportProvider.cpp  ImportProvider.h  Providers.cpp  SmfImportProvider.cpp  SmfImportProvider.h
engine/src/media/: AssetStore.cpp  AssetStore.h  AudioEncoder.cpp  AudioEncoder.h  AudioRecorder.cpp  AudioRecorder.h  Decoder.cpp  Decoder.h  Loudness.cpp  Loudness.h  PeakFile.cpp  PeakFile.h  TimeStretch.cpp  TimeStretch.h  WavWriter.cpp  WavWriter.h
engine/src/midi/: MidiEvent.h  MidiInput.cpp  MidiInput.h  MidiRecorder.cpp  MidiRecorder.h  SmfReader.cpp  SmfReader.h  SmfTrackPlan.cpp  SmfTrackPlan.h  SmfWriter.cpp  SmfWriter.h
engine/src/plugins/: Blacklist.cpp  Blacklist.h  HostProcess.cpp  HostProcess.h  PluginProxyNode.cpp  PluginProxyNode.h  PluginRegistry.cpp  PluginRegistry.h  PluginScanner.cpp  PluginScanner.h
engine/src/project/: Autosave.cpp  Autosave.h  Commands.cpp  Commands.h  Model.cpp  Model.h  ModelOps.h  ProjectIO.cpp  ProjectIO.h  Serialize.cpp  UndoStack.cpp  UndoStack.h
engine/src/server/: Api.cpp  Api.h  EventBus.cpp  EventBus.h  HttpWsServer.cpp  HttpWsServer.h  McpServer.cpp  McpServer.h  Multipart.cpp  Multipart.h  Sha1.h  StaticFiles.cpp  StaticFiles.h
engine/src/util/: Dialogs.cpp  Dialogs.h  Json.h  Log.h  LogFile.cpp  LogFile.h  Paths.cpp  Paths.h  Spawn.cpp  Spawn.h  Strings.h  Utf8.h
plugin-host/: CMakeLists.txt
plugin-host/src/: Base64.h  EditorWindow.cpp  EditorWindow.h  PluginAdapter.h  PosReplayData.h  RegOverlay.cpp  RegOverlay.h  Scan.cpp  Scan.h  ShmServer.cpp  ShmServer.h  Vst2Host.cpp  Vst2Host.h  Vst3Host.cpp  Vst3Host.h  Vst3Utils.cpp  Vst3Utils.h  main.cpp
scripts/: agent-engine-test.mjs  agent-llm-test.mjs  automation-write-test.mjs  build.ps1  comping-test.mjs  cpr-analyze.mjs  cpr-bisect-build3.mjs  cpr-container.mjs  cpr-export-samples.mjs  cpr-taper.mjs  cpr-write-test.mjs  cpr-write.mjs  dev.ps1  export-formats-test.mjs  extract-bravura.mjs  generate-agent-catalog.mjs  generate-cpr-donor-header.mjs  import-test.mjs  loudness-test.mjs  mcp-test.mjs  midi-learn-test.mjs  package.ps1  peaks-test.mjs  probe32.c  rebuild.ps1  sidechain-test.mjs  smf-logic-test.mjs  smoke-test.mjs  stock-effects-test.mjs  stock-instrument-test.mjs  stock-sampler-test.mjs  timestretch-test.mjs  trackarchive-xml.mjs  vca-test.mjs  vst-load-test.mjs
shared/agent/: capabilities.json  capabilities.schema.json  prompts.json  prompts.schema.json
shared/ipc/: Pipe.cpp  Pipe.h  PluginIpc.h  SharedMem.cpp  SharedMem.h
shared/vst2/: vestige.h
shared/win/: Foreground.h
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/agent/: agentApprovals.test.ts  agentApprovals.ts  agentClient.test.ts  agentClient.ts  agentConfig.ts  agentLoop.test.ts  agentLoop.ts  agentPersistence.test.ts  agentPersistence.ts  agentTools.test.ts  agentTools.ts  agentTypes.ts  catalog.gen.ts  catalog.test.ts  prompts.gen.ts  uiExecutor.test.ts  uiExecutor.ts  useAgentSession.ts  wsTransport.ts
ui/src/components/Agent/: AgentPanel.tsx  ApprovalCard.tsx  ScriptsManager.tsx  agent.css
ui/src/components/Browser/: Browser.tsx  FilesTab.tsx  PluginsTab.tsx  browser.css  pluginHoverCard.tsx
ui/src/components/ClipEditor/: ClipEditor.tsx  clipEditor.css
ui/src/components/CommandPalette/: CommandPalette.tsx  commandPalette.css
ui/src/components/Dialogs/: DialogsHost.tsx  ExportDialog.tsx  PastePathDialog.tsx  PluginLoadOverlay.tsx  QuickHelpOverlay.tsx  RecoveryDialog.tsx  RecreatePluginsDialog.tsx  RelinkDialog.tsx  ShortcutsDialog.tsx  confirm.tsx  dialogs.css
ui/src/components/Inspector/: ClipSection.tsx  EqCurve.tsx  EqSection.tsx  Inspector.tsx  MarkersSection.tsx  ProjectOverview.tsx  Section.tsx  TakesSection.tsx  TrackSection.tsx  eq.ts  fields.tsx  inspector.css
ui/src/components/Mixer/: ChannelStrip.tsx  InsertSlots.tsx  Mixer.tsx  RoomView.tsx  SendsBlock.tsx  mixer.css  popups.tsx  roomMath.test.ts  roomMath.ts  roomview.css  useGestureValue.ts
ui/src/components/PianoRoll/: PianoRoll.tsx  (+4 more)
ui/src/lib/: accent.ts  appTitle.test.ts  appTitle.ts  canvas.ts  clipboard.ts  dnd.test.ts  dnd.ts  followPlayhead.test.ts  followPlayhead.ts  followSuspend.ts  fuzzy.test.ts  fuzzy.ts  ids.ts  keyboard.ts  layouts.ts  midiFunctions.test.ts  midiFunctions.ts  motion.ts  peaks.ts  pluginVariants.test.ts  pluginVariants.ts  prefs.test.ts  prefs.ts  reveal.ts  shortcutTable.ts  theme-base.css  theme.css  theme.ts  time.test.ts  time.ts  viewportAnim.ts  vizMath.test.ts  vizMath.ts  xray.test.ts  xray.ts
ui/src/protocol/: types.ts  ws.ts
ui/src/store/: actions.ts  metronome.ts  store.ts
(+81 files in other folders)
